Using feedback template, adding more enhancment to the project