@@ -2,11 +2,11 @@ package com.epam;
 
 import com.epam.analysis.CheckstyleAnalyzer;
 import com.epam.analysis.PMDAnalyzer;
+import com.epam.feedback.FeedbackGenerator;
 import com.epam.model.AnalysisFinding;
 import com.epam.model.KnowledgeEntry;
 import com.epam.retrieval.KnowledgeBaseIndexer;
 import com.epam.retrieval.KnowledgeBaseSearcher;
-import com.epam.feedback.FeedbackGenerator;
 
 import java.io.File;
 import java.util.ArrayList;
@@ -17,73 +17,37 @@ import java.util.List;
  * Orchestrates the complete pipeline: static analysis, knowledge retrieval, and feedback generation.
  */
 public class Main {
-    
-    /**
-     * Main method that runs the complete RAG pipeline for code review.
-     * 
-     * @param args Command line arguments: [JavaFile] [CheckstyleConfig] [PMDRuleset] [KnowledgeBaseDir] [IndexDir]
-     */
-    public static void main(String[] args) {
-        // If no arguments provided, run with default test samples
-        if (args.length == 0) {
+
+    public static void main(String[] args) throws Exception {
             runTestSamples();
-            return;
-        }
-        
-        if (args.length < 5) {
-            printUsage();
-            return;
-        }
-        
-        try {
-            // Parse command line arguments
-            File javaFile = new File(args[0]);
-            File checkstyleConfig = new File(args[1]);
-            File pmdRuleset = new File(args[2]);
-            String kbDir = args[3];
-            String indexDir = args[4];
-            
-            // Validate input files
-            validateInputs(javaFile, checkstyleConfig, pmdRuleset, kbDir);
-            
-            System.out.println("Starting Java RAG Code Review Pipeline...");
-            
-            // Step 1: Index knowledge base (RAG - Retrieval preparation)
-            indexKnowledgeBase(kbDir, indexDir);
-            
-            // Step 2: Run static analysis (Checkstyle + PMD)
-            List<AnalysisFinding> findings = runStaticAnalysis(javaFile, checkstyleConfig, pmdRuleset);
-            
-            // Step 3: Generate feedback using RAG (Retrieval + Generation)
-            generateFeedback(findings, indexDir);
-            
-            System.out.println("\nCode review completed successfully!");
-            
-        } catch (Exception e) {
-            System.err.println("Error during code review: " + e.getMessage());
-            e.printStackTrace();
-        }
     }
     
     /**
      * Runs test samples when no arguments are provided.
      */
-    private static void runTestSamples() {
+    private static void runTestSamples() throws Exception {
         System.out.println("Running Java RAG Code Review with test samples...");
         System.out.println("=================================================");
         
         String[] testFiles = {
             "samples/KnowledgeBaseTestExample.java",
-            "samples/BadCodeExample.java",
-            "samples/AnotherBadExample.java", 
-            "samples/GoodCodeExample.java"
+//            "samples/BadCodeExample.java",
+//            "samples/AnotherBadExample.java",
+//            "samples/GoodCodeExample.java",
+//            "samples/TestClass.java"
         };
         
         String checkstyleConfig = "src/main/resources/checkstyle.xml";
         String pmdRuleset = "src/main/resources/pmd-ruleset.xml";
         String kbDir = "src/main/resources/knowledgebase";
         String indexDir = "index";
-        
+
+        // Step 1: Index knowledge base (RAG - Retrieval preparation)
+        // This part for demo, but usually you will have all the indexes in some embedded DB, documents, etc.
+        indexKnowledgeBase(kbDir, indexDir);
+
+
+
         for (String testFile : testFiles) {
             System.out.println("\n" + "=".repeat(50));
             System.out.println("Testing: " + testFile);
@@ -95,14 +59,11 @@ public class Main {
                     System.out.println("Test file not found: " + testFile);
                     continue;
                 }
-                
-                // Index knowledge base
-                indexKnowledgeBase(kbDir, indexDir);
-                
-                // Run analysis
+
+                // Step 2: Run static analysis (Checkstyle + PMD)
                 List<AnalysisFinding> findings = runStaticAnalysis(javaFile, new File(checkstyleConfig), new File(pmdRuleset));
-                
-                // Generate feedback
+
+                // Step 3: Generate feedback using RAG (Retrieval + Generation)
                 generateFeedback(findings, indexDir);
                 
             } catch (Exception e) {
@@ -150,12 +111,11 @@ public class Main {
      */
     private static List<AnalysisFinding> runStaticAnalysis(File javaFile, File checkstyleConfig, File pmdRuleset) throws Exception {
         System.out.println("Running static analysis...");
-        List<AnalysisFinding> allFindings = new ArrayList<>();
-        
+
         // Run Checkstyle analysis
         CheckstyleAnalyzer checkstyle = new CheckstyleAnalyzer();
         List<AnalysisFinding> checkstyleFindings = checkstyle.analyze(javaFile, checkstyleConfig);
-        allFindings.addAll(checkstyleFindings);
+        List<AnalysisFinding> allFindings = new ArrayList<>(checkstyleFindings);
         System.out.println("Checkstyle found " + checkstyleFindings.size() + " issues.");
         
         // Run PMD analysis
@@ -189,20 +149,20 @@ public class Main {
         int knowledgeMatches = 0;
         
         for (AnalysisFinding finding : findings) {
-            System.out.println("\n--- Processing finding: " + finding.getIssue() + " ---");
+            System.out.println("\n--- Processing finding: " + finding.issue() + " ---");
             
             // RAG: Retrieve relevant knowledge entries
-            List<KnowledgeEntry> entries = searcher.search(finding.getIssue(), 1);
+            List<KnowledgeEntry> entries = searcher.search(finding.issue(), 1);
             
             // RAG: Generate feedback combining finding + knowledge
             if (!entries.isEmpty()) {
                 knowledgeMatches++;
-                KnowledgeEntry entry = entries.get(0);
-                System.out.println("✓ Knowledge base match found for: " + finding.getIssue());
+                KnowledgeEntry entry = entries.getFirst();
+                System.out.println("✓ Knowledge base match found for: " + finding.issue());
                 String feedback = feedbackGen.generateFeedback(finding, entry);
                 System.out.println(feedback);
             } else {
-                System.out.println("✗ No knowledge base match for: " + finding.getIssue());
+                System.out.println("✗ No knowledge base match for: " + finding.issue());
                 
                 // Get available topics for context
                 List<String> availableTopics = searcher.getAllTopics();
@@ -214,52 +174,7 @@ public class Main {
         System.out.println("\n=== RAG PIPELINE SUMMARY ===");
         System.out.println("Total findings: " + findings.size());
         System.out.println("Knowledge base matches: " + knowledgeMatches);
-        System.out.println("Match rate: " + (findings.size() > 0 ? (knowledgeMatches * 100 / findings.size()) : 0) + "%");
+        System.out.println("Match rate: " + (!findings.isEmpty() ? (knowledgeMatches * 100 / findings.size()) : 0) + "%");
     }
-    
-    /**
-     * Validates that all required input files and directories exist.
-     * 
-     * @param javaFile Java source file to analyze
-     * @param checkstyleConfig Checkstyle configuration file
-     * @param pmdRuleset PMD ruleset file
-     * @param kbDir Knowledge base directory
-     * @throws IllegalArgumentException If any required input is missing
-     */
-    private static void validateInputs(File javaFile, File checkstyleConfig, File pmdRuleset, String kbDir) {
-        if (!javaFile.exists()) {
-            throw new IllegalArgumentException("Java file not found: " + javaFile.getAbsolutePath());
-        }
-        if (!checkstyleConfig.exists()) {
-            throw new IllegalArgumentException("Checkstyle config not found: " + checkstyleConfig.getAbsolutePath());
-        }
-        if (!pmdRuleset.exists()) {
-            throw new IllegalArgumentException("PMD ruleset not found: " + pmdRuleset.getAbsolutePath());
-        }
-        if (!new File(kbDir).exists()) {
-            throw new IllegalArgumentException("Knowledge base directory not found: " + kbDir);
-        }
-    }
-    
-    /**
-     * Prints usage instructions for the application.
-     */
-    private static void printUsage() {
-        System.out.println("Java RAG Code Review System");
-        System.out.println("Usage: java com.epam.Main [JavaFile] [CheckstyleConfig] [PMDRuleset] [KnowledgeBaseDir] [IndexDir]");
-        System.out.println();
-        System.out.println("Run without arguments to test with sample files:");
-        System.out.println("  java com.epam.Main");
-        System.out.println();
-        System.out.println("Or specify custom files:");
-        System.out.println("Arguments:");
-        System.out.println("  JavaFile         - Path to Java source file to analyze");
-        System.out.println("  CheckstyleConfig - Path to Checkstyle configuration XML file");
-        System.out.println("  PMDRuleset      - Path to PMD ruleset XML file");
-        System.out.println("  KnowledgeBaseDir - Directory containing JSON knowledge base files");
-        System.out.println("  IndexDir        - Directory for Lucene index (will be created if not exists)");
-        System.out.println();
-        System.out.println("Example:");
-        System.out.println("  java -jar javarag.jar src/main/java/Test.java src/main/resources/checkstyle.xml src/main/resources/pmd-ruleset.xml src/main/resources/knowledgebase index");
-    }
+
 }
